# aider

runanywhere-agent/: .gitignore  README.md  pyproject.toml
runanywhere-agent/runanywhere_agent/: __init__.py  __main__.py  auth.py  config.py
runanywhere-agent/runanywhere_agent/prompts/: __init__.py  patch.py  runanywhere_prompts.py
runanywhere-agent/runanywhere_agent/resources/: sdk-documentation.md
